# rust-2026-assignments

./: .gitignore  README.md
assignment-1/: Cargo.toml  README.md
assignment-1/01-run-length-encode/: Cargo.toml  README.md  solution.md
assignment-1/01-run-length-encode/src/: lib.rs
assignment-1/02-longest-word/: Cargo.toml  README.md  solution.md
assignment-1/02-longest-word/src/: lib.rs
assignment-1/03-reverse-words/: Cargo.toml  README.md  solution.md
assignment-1/03-reverse-words/src/: lib.rs
assignment-1/04-censor-vowels/: Cargo.toml  README.md  solution.md
assignment-1/04-censor-vowels/src/: lib.rs
assignment-1/05-char-frequency/: Cargo.toml  README.md  solution.md
assignment-1/05-char-frequency/src/: lib.rs
assignment-1/06-caesar/: Cargo.toml  README.md  solution.md
assignment-1/06-caesar/src/: lib.rs
assignment-1/07-min-max/: Cargo.toml  README.md  solution.md
assignment-1/07-min-max/src/: lib.rs
assignment-1/08-split-and-double/: Cargo.toml  README.md  solution.md
assignment-1/08-split-and-double/src/: lib.rs
assignment-1/09-inventory/: Cargo.toml  README.md  solution.md
assignment-1/09-inventory/src/: lib.rs
assignment-1/10-group-anagrams/: Cargo.toml  README.md  solution.md
assignment-1/10-group-anagrams/src/: lib.rs
